kubernetes/apps/immich/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-postgres
  namespace: immich
spec:
  selector:
    app: immich-postgres
  ports:
    - port: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: immich-postgres
  namespace: immich
spec:
  serviceName: immich-postgres
  replicas: 1
  selector:
    matchLabels:
      app: immich-postgres
  template:
    metadata:
      labels:
        app: immich-postgres
    spec:
      securityContext:
        runAsUser: 977
        runAsGroup: 988
        fsGroup: 988
      containers:
        - name: postgres
          image: ghcr.io/immich-app/postgres:14-vectorchord0.3.0-pgvectors0.2.0
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: immich-postgres-nfs
